[package]
name = "blip-bloop"
version = "0.0.1"
authors = ["loicbourgois <loic@bourgois.pro>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
rapier2d = { version = "0.2.1", features = [ "parallel" ] }
uuid = {version = "0.8.1", features = ["v4"]}
serde = { version = "1.0.116", features = ["derive"]}
serde_json = "1.0.57"
tungstenite = "0.11.1"
